4.keyPair/securityGroup.tf
resource "aws_security_group" "web_allow_traffic" {
  name        = "web"
  description = "Allow all inbound traffic"
  vpc_id      = "${var.vpc}"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    self 	= true
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    self 	    = true
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
tags = {
    Name = "Web" 
  }
}
